--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,7 @@
     "esModuleInterop": true,
     "strict": true,
     "moduleResolution": "node",
-    "outDir": "./dist",
-    "rootDir": "./src"
-  }
+    "outDir": "./dist"
+  },
+  "include": ["src", "tests"]
 }
